github.repository_owner

--- a/.github/workflows/lph.yml
+++ b/.github/workflows/lph.yml
@@ -7,4 +7,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: list auth
-        run: "echo \"github actor: ${{github.actor}}\""
+        run: |
+          echo "github.actor: ${{github.actor}}"
+          echo "github.repository_owner: ${{github.actor}}"
