--- a/.github/workflows/lph.yml
+++ b/.github/workflows/lph.yml
@@ -10,3 +10,4 @@ jobs:
         run: |
           echo "github.actor: ${{github.actor}}"
           echo "github.repository_owner: ${{github.actor}}"
+          gh api -H "Accept: application/vnd.github+json" /user/orgs
