--- a/.github/workflows/lph.yml
+++ b/.github/workflows/lph.yml
@@ -7,6 +7,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: list auth
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         run: |
           echo "github.actor: ${{github.actor}}"
           echo "github.repository_owner: ${{github.actor}}"
