--- a/.github/workflows/lph.yml
+++ b/.github/workflows/lph.yml
@@ -6,13 +6,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: list auth
+      - name: gh api calls
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         run: |
           echo "github.actor: ${{github.actor}}"
           echo "github.repository_owner: ${{github.actor}}"
-          gh api -X GET "/users/${{github.actor}}/orgs" -F per_page=100 --paginate
           gh api \
             -H "Accept: application/vnd.github+json" \
-            /users/${{github.actor}}
+            /userorgs
