add perm and switch back to env tk

--- a/.github/workflows/lph.yml
+++ b/.github/workflows/lph.yml
@@ -2,15 +2,17 @@ name: lines per hour
 on: push
 jobs:
   build:
+    permissions: read-all
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: gh api calls
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         run: |
           echo "github.actor: ${{github.actor}}"
           echo "github.repository_owner: ${{github.actor}}"
-          echo ${{ secrets.GITHUB_TOKEN }} | gh auth login --with-token
           gh api \
             -H "Accept: application/vnd.github+json" \
             /user/orgs
