--- a/.github/workflows/lph.yml
+++ b/.github/workflows/lph.yml
@@ -15,4 +15,4 @@ jobs:
           echo "github.repository_owner: ${{github.actor}}"
           gh api \
             -H "Accept: application/vnd.github+json" \
-            /user/orgs
+            /user/orgs | jq '[].login'
