gitignore & org json

--- a/.github/workflows/lph.yml
+++ b/.github/workflows/lph.yml
@@ -15,4 +15,9 @@ jobs:
           echo "github.repository_owner: ${{github.actor}}"
           gh api \
             -H "Accept: application/vnd.github+json" \
-            /user/orgs | jq {['.[].login']}
+            /user/orgs | jq '[.[].login] | {orgs: .}' > orgs.json
+      - name: archive json
+        uses: actions/upload-artifact@v3
+        with:
+          name: orgs
+          path: orgs.json
