--- a/.github/workflows/lph.yml
+++ b/.github/workflows/lph.yml
@@ -16,6 +16,10 @@ jobs:
           gh api \
             -H "Accept: application/vnd.github+json" \
             /user/orgs | jq '[.[].login] | {orgs: .}' > orgs.json
+          export ORGS_JSON=orgs.json
+          gh api \
+            -H "Accept: application/vnd.github+json" \
+            /users/${{github.actor}}/events
       - name: archive json
         uses: actions/upload-artifact@v3
         with:
