--- a/.github/workflows/lph.yml
+++ b/.github/workflows/lph.yml
@@ -20,6 +20,9 @@ jobs:
           gh api \
             -H "Accept: application/vnd.github+json" \
             /users/${{github.actor}}/events > events.json
+          cat events.json | \
+            jq '.[] | select(.type=="PushEvent") | .payload.commits[]' | \
+            jq -s '.' > commits.json
       - name: archive json
         uses: actions/upload-artifact@v3
         with:
@@ -27,3 +30,4 @@ jobs:
           path: |
             orgs.json
             events.json
+            commits.json
